--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "idb-keyval": "^2.3.0",
     "jwt-decode": "^2.2.0",
+    "vee-validate": "^2.0.0-rc.19",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.0"
