--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "patch": "npm version bump",
     "watch": "webpack-dev-server --config build/webpack.config.js",
+    "build --report": "npm run build && webpack-bundle-analyzer",
     "build": "rm -rf ./dist && npm run build:client && workbox generate:sw",
     "build:client": "NODE_ENV=production webpack --config build/webpack.config.js -p --progress",
     "webpack-defaults": "webpack-defaults"
