--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "short_name": "AIR",
   "icons": [
     {
-      "src": "/assets/icons/icon-128x128.png",
+      "src": "/public/icons/air@128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "/assets/icons/icon-256x256.png",
+      "src": "/public/icons/air@256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "/assets/icons/icon-512x512.png",
+      "src": "/public/icons/air@512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
@@ -21,6 +21,6 @@
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#FAFAFA",
-  "theme_color": "#000"
+  "background_color": "#FFD400",
+  "theme_color": "#01a875"
 }
