--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
   },
   "homepage": "https://github.com/Ephec-AIR/pwa#readme",
   "dependencies": {
-    "chartist": "^0.11.0",
     "idb": "^2.0.4",
     "idb-keyval": "^2.3.0",
     "jwt-decode": "^2.2.0",
     "regenerator-runtime": "^0.11.0",
     "vee-validate": "^2.0.0-rc.19",
     "vue": "^2.5.2",
+    "vue-chartist": "^2.1.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.0"
   },
