--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,6 @@
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#FFD400",
-  "theme_color": "#01a875"
+  "background_color": "#C0ED70",
+  "theme_color": "#D4E157"
 }
