--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.1",
     "source-map-loader": "^0.2.2",
     "style-loader": "^0.18.2",
     "vue-loader": "^13.3.0",
