--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "patch": "npm version bump",
     "watch": "webpack-dev-server --config build/webpack.config.js",
     "build --report": "npm run build && webpack-bundle-analyzer",
-    "build": "rm -rf ./dist && npm run build:client && workbox generate:sw",
+    "build": "rm -rf ./dist && npm run build:client",
     "build:client": "NODE_ENV=production webpack --config build/webpack.config.js -p --progress",
     "webpack-defaults": "webpack-defaults"
   },
@@ -55,6 +55,8 @@
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "preload-webpack-plugin": "^2.0.0",
+    "resource-hints-webpack-plugin": "0.0.1",
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.1",
     "source-map-loader": "^0.2.2",
@@ -64,6 +66,7 @@
     "webpack": "^3.8.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.2",
-    "workbox-cli": "^2.1.0"
+    "workbox-cli": "^2.1.0",
+    "workbox-webpack-plugin": "^2.1.1"
   }
 }
