--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "webpack-dev-server --config build/webpack.config.js",
     "build --report": "npm run build && webpack-bundle-analyzer",
     "build": "rm -rf ./dist && npm run build:client",
-    "build:client": "NODE_ENV=production webpack --config build/webpack.config.js -p --progress",
+    "build:client": "NODE_ENV=production webpack --config build/webpack.config.js -p",
     "webpack-defaults": "webpack-defaults"
   },
   "repository": {
@@ -56,9 +56,11 @@
     "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "preload-webpack-plugin": "^2.0.0",
+    "progress-bar-webpack-plugin": "^1.10.0",
     "resource-hints-webpack-plugin": "0.0.1",
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.1",
+    "script-ext-html-webpack-plugin": "^1.8.8",
     "source-map-loader": "^0.2.2",
     "style-loader": "^0.18.2",
     "vue-loader": "^13.3.0",
